style.css
/* poppins font  */
@import url("https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Poppins:wght@400;500;600;700&display=swap");

/* colors */
:root {
  /* ### Primary */
  --Cyan: hsl(180, 66%, 49%);
  --DarkViolet: hsl(257, 27%, 26%);
  --White: hsl(0, 0%, 100%);

  /* ### Secondary */
  --Red: hsl(0, 87%, 67%);

  /* ### Neutral */
  --Gray: hsl(0, 0%, 75%);
  --GrayishViolet: hsl(257, 7%, 63%);
  --VeryDarkBlue: hsl(255, 11%, 22%);
  --VeryDarkViolet: hsl(260, 8%, 14%);
}
/* css reset  */
html {
  font-size: 100%;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  font-family: "Poppins", sans-serif;
  /* background-color: var(--Gray); */
  background-color: #f0f1f6;
  font-size: 18px;
  color: var(--VeryDarkBlue);
}
a {
  color: var(--VeryDarkBlue);
  text-decoration: none;
}
img {
  max-width: 100%;
  height: auto;
}
p {
  line-height: 1.7;
}
.button {
  padding: 15px 40px;
  background-color: var(--Cyan);
  font-size: 1rem;
  color: var(--White);
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
}
.button:hover {
  filter: brightness(1.1);
}
.button--round {
  border-radius: 10rem;
}
.button--square {
  border-radius: 0.5rem;
  padding: 15px 30px;
}
@media only screen and (min-width: 1100px) {
  .button--square {
    padding: 15px 25px;
  }
}
/************navbar**************/
.header {
  background-color: var(--White);
}
/* .logo {
} */
.logo img {
  align-self: center;
  /* width: 200px; */
}
.nav {
  height: 20vh;
  display: flex;
  align-items: center;
}
.nav__content,
.nav__menu {
  display: flex;
  align-items: center;
}
.nav__menu {
  width: 80%;
  justify-content: space-between;
  z-index: 999;
}
.nav__content {
  height: 10vh;
  width: 90%;
  margin: auto;
  justify-content: space-between;
}
.nav__link:not(:last-child) {
  margin-right: 4rem;
}
.nav__link {
  color: var(--VeryDarkBlue);
}
.nav__menu.active {
  left: 50%;
}
.hamburger {
  display: none;
}
.bar {
  display: block;
  width: 30px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #101010;
}
.nav__start,
.nav__end {
  display: flex;
  align-items: center;
}
.nav__button {
  color: var(--White);
  padding: 10px 25px;
  background-color: var(--Cyan);
  font-size: 1rem;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
}
@media only screen and (max-width: 800px) {
  .hamburger {
    display: block;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  .nav__menu {
    flex-direction: column;
    background-color: var(--DarkViolet);
    color: var(--White);
    position: absolute;
    top: 50%;
    left: -100%;
    transform: translate(-50%, -50%);
    padding: 2rem 0;
    border-radius: 0.5rem;
    width: 90%;
    max-width: 500px;
    /* flex-wrap: wrap; */
  }
  .nav__button {
    flex-basis: 100%;
    width: 90%;
    max-width: 450px;
  }
  .nav__link {
    font-weight: 500;
    color: var(--White);
  }
  .nav__link:not(:last-child) {
    margin-right: 0;
    margin-bottom: 1.5rem;
  }
  .nav__start .nav__link:last-child {
    margin-bottom: 2rem;
  }
  .nav__start {
    margin: 0 0 2rem 0;
    border-bottom: 1px solid var(--GrayishViolet);
  }
  .nav__start,
  .nav__end {
    width: 80%;
    text-align: center;
    flex-direction: column;
    justify-content: center;
  }
}

/***********hero***********/
.hero {
  overflow-x: hidden;
}
.hero__content {
  height: 90vh;
  display: flex;
  align-items: center;
  max-width: 1200px;
  width: 90%;
  margin: auto;
  gap: 2rem;
  padding: 60px 0;
}
.hero__left {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: flex-start;
  width: 50%;
}
.hero__right {
  overflow: hidden;
}
.hero__title {
  font-size: 4.8rem;
  font-weight: 700;
  line-height: 1.1;
}
.hero__text {
  width: 80%;
}
.hero__content img {
  width: 50%;
  display: flex;
  align-items: center;
}

@media only screen and (max-width: 980px) {
  .hero__content {
    flex-direction: column;
  }
  .hero__content img {
    position: relative;
    width: 100%;
  }
  .hero__right {
    order: 1;
  }
  .hero__left {
    order: 2;
    width: 100%;
    align-items: center;
    text-align: center;
  }
  .hero__text {
    width: 90%;
  }
  .hero__title {
    font-size: 3rem;
  }
}
@media only screen and (max-width: 400px) {
  .hero__title {
    font-size: 2rem;
  }
}

/************Shorten Link**************/
.shorten-link {
  width: 60%;
  background: url("images/bg-shorten-desktop.svg"), var(--DarkViolet);
  background-position: top center;
  padding: 2rem;
  margin: auto;
  max-width: 800px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  border-radius: 0.7rem;
  bottom: 40px;
  position: relative;
}
.shorten-link__input {
  width: 70%;
  border: 2px solid transparent;
  border-radius: 0.5rem;
  outline: 0;
  padding: 15px;
}
.shorten-link__input:focus,
::placeholder {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  font-weight: 400;
  outline-offset: 0;
}
@media only screen and (max-width: 980px) {
  .shorten-link {
    flex-direction: column;
    background: url("images/bg-shorten-mobile.svg"), var(--DarkViolet);
    background-repeat: no-repeat;
    background-size: cover;
    width: 90%;
    max-width: 700px;
  }
  .shorten-link__input,
  .button--square {
    width: 100%;
    text-align: center;
  }
}

/************stat*******************/
.stat {
  max-width: 1200px;
  margin: 5rem auto 10rem auto;
  width: 90%;
  position: relative;
}
.stat__top {
  text-align: center;
  width: 50%;
  max-width: 500px;
  margin: auto;
}
.stat__cards::before {
  height: 10px;
  position: absolute;
  width: 100%;
  z-index: -99;
  background: var(--Cyan);
  content: "";
}
.stat__cards {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  gap: 2rem;
  margin: 4rem auto;
  max-width: 1440px;
  font-size: 16px;
}
.stat__cards .card {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background-color: var(--White);
  padding: 0 3rem 2rem 2rem;
  border-radius: 10px;
  margin: auto;
}
.stat__cards .card:nth-child(2) {
  position: relative;
  top: 40px;
}
.stat__cards .card:nth-child(3) {
  position: relative;
  top: 80px;
}
.stat__cards img {
  background-color: var(--DarkViolet);
  padding: 1rem;
  border-radius: 50%;
  width: 80px;
  transform: translateY(-50%);
}
@media only screen and (max-width: 992px) {
  .stat {
    margin: 2rem auto;
  }
  .stat__cards {
    flex-direction: column;
  }
  .stat__cards .card:nth-child(2) {
    top: 0;
  }
  .stat__cards .card:nth-child(3) {
    top: 0;
  }
  .stat__cards::before {
    height: 10px;
    position: absolute;
    width: 100%;
    z-index: -99;
    background: var(--Cyan);
    transform: rotate(90deg);
    content: "";
  }
  .stat__cards img {
    transform: translateY(0%);
  }
  .stat__cards .card {
    justify-content: center;
    align-items: center;
    gap: 1rem;
    padding-top: 2rem;
    text-align: center;
    padding: 2rem;
    max-width: 600px;
  }
  .stat__top {
    width: 100%;
  }
}

/***********Call-to-action**************/
.call-to-action {
  background: url("images/bg-boost-desktop.svg"), var(--DarkViolet);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top center;
  color: var(--White);
}
.call-to-action div {
  height: 250px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
  width: 90%;
  margin: auto;
}
.call-to-action h2 {
  font-size: 3rem;
  font-weight: 600;
  line-height: 1.2;
}
@media only screen and (max-width: 768px) {
  .call-to-action {
    background: url("images/bg-boost-mobile.svg"), var(--DarkViolet);
  }
  .call-to-action h2 {
    font-size: 2.4rem;
  }
  .call-to-action div {
    gap: 2rem;
  }
}

/**************footer****************/
.footer {
  background-color: var(--VeryDarkViolet);
  color: var(--White);
  padding: 50px 0;
}
.footer__content,
.footer__navigation,
.footer__navigation .column,
.footer__content .social {
  display: flex;
}
.footer__content {
  width: 90%;
  max-width: 1200px;
  margin: auto;
  justify-content: space-between;
  align-items: baseline;
}
.footer__navigation {
  gap: 3rem;
  justify-content: flex-end;
  align-self: flex-end;
  width: 50%;
}
.footer__navigation .column {
  flex-direction: column;
  gap: 5px;
}
.footer__navigation .column a {
  /* color: var(--White); */
  color: var(--Gray);
  font-weight: 300;
  font-size: 16px;
  transition: all 0.1s ease-in-out;
}
.footer__navigation .column a:hover {
  color: var(--Cyan);
}

.footer__content .social i {
  transition: all 0.1s ease-in-out;
  color: var(--White);
  gap: 1rem;
  font-size: 25px;
}
.footer__content .social i:hover {
  font-size: 25px;
  color: var(--Cyan);
}
.footer__content .social {
  flex-direction: row;
  gap: 1rem;
  width: 20%;
}
.footer__navigation .column p {
  font-size: 18px;
  margin-bottom: 1rem;
  font-weight: bold;
}
@media only screen and (max-width: 768px) {
  .footer__content {
    flex-direction: column;
  }
  .footer__navigation {
    flex-direction: column;
    width: 100%;
    margin: 2rem 0;
  }
}

